# ChangeLog for x11-misc/bubblemon
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/bubblemon/ChangeLog,v 1.30 2008/01/09 08:15:43 nelchael Exp $

*bubblemon-2.0.8 (09 Jan 2008)

  09 Jan 2008; Krzysiek Pawlik <nelchael@gentoo.org>
  +bubblemon-2.0.8.ebuild:
  Version bump.

  06 Jan 2008; Samuli Suominen <drac@gentoo.org> bubblemon-1.46-r1.ebuild:
  Add missing pkgconfig dep wrt #204599

  30 Jun 2007; Raúl Porcel <armin76@gentoo.org> bubblemon-1.46-r1.ebuild:
  alpha/x86 stable wrt #183638

  29 Jun 2007; Lars Weiler <pylon@gentoo.org> bubblemon-1.46-r1.ebuild:
  Stable on ppc; bug #183638.

  29 Jun 2007; Christoph Mende <angelos@gentoo.org>
  bubblemon-1.46-r1.ebuild:
  Stable on amd64 wrt bug #183638

  29 Jun 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  bubblemon-1.46-r1.ebuild:
  Stable on sparc wrt #183638

  28 May 2007; Samuli Suominen <drac@gentoo.org>
  files/bubblemon-1.46-gtk.patch:
  QA. Don't prestrip binary.

*bubblemon-1.46-r1 (28 May 2007)

  28 May 2007; Samuli Suominen <drac@gentoo.org>
  +files/bubblemon-1.46-gtk.patch, +bubblemon-1.46-r1.ebuild:
  Thanks to 6thpink and Bernard Cafarelli for porting bubblemon to GTK+-2.0 in
  bug 175730.

  21 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

  14 Oct 2006; Krzysiek Pawlik <nelchael@gentoo.org> -bubblemon-1.41.ebuild:
  Remove old version.

  07 Feb 2006; Simon Stelling <blubb@gentoo.org> bubblemon-1.46.ebuild:
  stable on amd64

  07 Feb 2006; Aron Griffis <agriffis@gentoo.org> bubblemon-1.46.ebuild:
  Mark 1.46 stable on alpha

  11 Nov 2005; Michael Hanselmann <hansmi@gentoo.org> bubblemon-1.46.ebuild:
  Stable on ppc.

  02 Nov 2005; Gustavo Zacarias <gustavoz@gentoo.org> bubblemon-1.46.ebuild:
  Stable on sparc

  01 Nov 2005; Krzysiek Pawlik <nelchael@gentoo.org> bubblemon-1.46.ebuild:
  Stable on x86.

  01 Nov 2005; Krzysiek Pawlik <nelchael@gentoo.org> bubblemon-1.41.ebuild,