@@ -2,6 +2,6 @@ AUX bubblemon-1.46-gtk.patch 3435 RMD160 45e2d5d562237ec1b45553a21cc003796058dcc
 DIST bubblemon-2.0.8.tar.gz 249796 RMD160 42ebdd736add749ce1adf427d99ed759087a5045 SHA1 2dfc0092db800796e2830017ca47ef801d6458c3 SHA256 cc2921caa46b739512e6ec91bb4dfc17efbceaa02d647458b1d8ef494cbab71e
 DIST bubblemon-dockapp-1.46.tar.gz 40001 RMD160 79e8be36cd11a2c6f4998cd747b6125696603a81 SHA1 172de9ea7d78e4578143469187a72da8f836647a SHA256 f928073d3c69b2668e89b93cdcca5f390437831aab3eac3aa2129f8713e79dbf
 EBUILD bubblemon-1.46-r1.ebuild 981 RMD160 dfe1bf1087eefee6966c64f6d4fd2f212587b916 SHA1 c5d4fe7c55be25fce4525ec31b3913dfe31c6ae7 SHA256 4d1503988d2338db23a32fe49a24fd900413ae7d6ef51f2423d4228fd056357c
-EBUILD bubblemon-2.0.8.ebuild 781 RMD160 3b8e98bdc3d77781b645eea2b4c0f27a5cae58ab SHA1 7d81dc4fc6f45495c8076517155cf134a21589bf SHA256 115a3a86d16197758f32680fd284d27359d080d6b853d514af81df5f137474c9
-MISC ChangeLog 3655 RMD160 3ec07674592c30a052c0482ce836700ca7ed5392 SHA1 b32e950de7c61fb65fc7da816058572561f5a2fa SHA256 95fb0b8ac27bcf156f1be8090d8055a686b0b7a5e4a275b2ade1078d12902430
+EBUILD bubblemon-2.0.8-r1.ebuild 777 RMD160 671f1dd80af98733c973cbf86357f7cb3656972f SHA1 ec8a4c8b28acf5e30d673894fce700d439b26d5e SHA256 1f86c505cf42b4fb790013a052f0a251e4899b0c8ec1ff20c04ae0b7d25f4684
+MISC ChangeLog 3832 RMD160 2f644d78f1ee4b7d9942505c6e7dcb1030c8cb65 SHA1 bee33514d8676785441c829b65c8b117d288e1af SHA256 e7849ab067567a70ae817e22263554a84d44dceca1ddecd00a0e40f456708842
 MISC metadata.xml 475 RMD160 e1a44b901b512304f79749d9fc6e169e39ee7637 SHA1 f2d0cb73e5f48d43773179277def5e21b0863fd2 SHA256 3e736094fe08714e3ad07d7264f2fb0963c06d278975ee53227c73d8227ac3dd
