@@ -1,6 +1,12 @@
 # ChangeLog for x11-misc/bubblemon
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/bubblemon/ChangeLog,v 1.30 2008/01/09 08:15:43 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/bubblemon/ChangeLog,v 1.31 2008/01/15 11:48:51 drac Exp $
+
+*bubblemon-2.0.8-r1 (15 Jan 2008)
+
+  15 Jan 2008; Samuli Suominen <drac@gentoo.org> -bubblemon-2.0.8.ebuild,
+  +bubblemon-2.0.8-r1.ebuild:
+  Revision bump to new slot wrt #205937.
 
 *bubblemon-2.0.8 (09 Jan 2008)
 
